# aiogram_simple_technical_support_bot

./: .env.example  README.md  bot.py  config_reader.py  pyproject.toml  storage.py
bot/: __main__.py  config.py
bot/fsm/: question_states.py
bot/handlers/: __init__.py  answer.py  question.py  start.py
bot/structures/: commands.py  messages.py
fsm/: __init__.py  question_states.py
handlers/: answer.py  question.py  start.py
logging/: tutorial.py
